--- a/enem_files/grades_prediction.ipynb
+++ b/enem_files/grades_prediction.ipynb
@@ -590,7 +590,7 @@
    "source": [
     "Esse foi meu score anteriormente, com certeza se eu conseguisse verificar agora, iria ter um score bem maior que esse.\n",
     "\n",
-    " ![](./score_anterior.PNG)\n"
+    " ![](./score_anterior.png)\n"
    ]
   }
  ]
